# dwarves-glory-death-and-loot-ai

./: .gitignore  ProjectRequirements.txt  README.md  capture_template.bat  config.yaml  diagnose_latest.bat  knowledge_report.bat  memory_report.bat  print_mouse.bat  pyproject.toml  requirements.txt  run_autonomous.bat  run_bootstrap_knowledge.bat  run_bot.bat  setup.bat  teach_mode.bat  train_demonstrations.bat  train_tutorial_video.bat
knowledge/: baseline.yaml  video_baseline.yaml
src/dwarves_autoplayer/: __init__.py  baseline.py  bootstrap_knowledge.py  bot.py  capture_template.py  diagnose.py  game_model.py  knowledge_report.py  learned_policy.py  learner.py  memory_report.py  ocr.py  perception.py  playbook.py  recorder.py  screen_features.py  strategy.py  teach_mode.py  tooltip_reader.py  train_from_demonstrations.py  train_from_video.py
